--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "swr": "^2.2.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
